--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
   <div id="root"></div>
   <!-- Messenger Plugin chat Code -->
   <!-- Messenger Plugin chat Code -->
+  <!-- Messenger Plugin chat Code -->
   <div id="fb-root"></div>
 
   <!-- Your Plugin chat code -->
