--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
   <!-- Messenger Plugin chat Code -->
   <!-- Messenger Plugin chat Code -->
   <!-- Messenger Plugin chat Code -->
+  <!-- Messenger Plugin chat Code -->
   <div id="fb-root"></div>
 
   <!-- Your Plugin chat code -->
